# vb

./: build.gradle  gradlew  gradlew.bat  settings.gradle
.github/workflows/: build-apk.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/: MainActivity.java
app/src/main/java/com/nexus/audit/: MainActivity.java  MainActivity2.java
app/src/main/res/layout/: activity_main.xml
